# sea-retail-media-ssot

./: .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
.github/workflows/: ci.yml
config/: markets.yaml  sources.yaml  taxonomy.yaml
config/sim/: brand.yaml  priors.yaml  scenarios.yaml  seasonality.yaml
dashboard/: .env.example  README.md  middleware.ts  next.config.js  package-lock.json  package.json  vercel.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: channel-brief.tsx  daily-report.tsx  main-dashboard.tsx  masthead.tsx  primitives.tsx
dashboard/lib/: aggregations.ts  bq.ts  decisions.ts  decomposition.ts  format.ts  heatmap.ts  mock-panel.ts  pacing.ts  panel-data.ts  taxonomy.ts  tokens.ts  types.ts
dashboard/scripts/: copy-sim-csv.mjs
data/sim-csv/: README.md  google_ads_shopee.csv  meta_cpas.csv  mmm_ground_truth.yaml  shopee_ads.csv  tiktok_ads.csv  tiktok_shop.csv
docs/: implementation_roadmap.md  measurement_framework.md  simulation.md
scripts/: bootstrap_gcp.sh
sql/ddl/: 01_raw_tiktok_shop_orders.sql  02_raw_tiktok_ads_daily.sql  03_raw_shopee_orders.sql  04_raw_shopee_ads_daily.sql  05_raw_meta_cpas_daily.sql  06_raw_google_ads_shopee_daily.sql  07_raw_evc_google.sql  08_raw_evc_meta.sql  09_raw_evc_tiktok.sql
sql/evc/: 01_stg_evc.sql  02_fact_evc.sql  03_mart_daily_channel_panel_evc.sql
sql/fact/: 01_fact_platform_sales.sql  02_fact_onplatform_ads.sql  03_fact_offplatform_ads.sql
sql/mart/: 01_daily_channel_panel.sql
src/ssot/: bq.py  (+7 more)
tests/: test_supermetrics.py
(+81 files in other folders)
